--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       }
 
       .hero-image {
-        background-image: url('paeans_sunset.JPG'); /* The image used */
+        background-image: url('https://github.com/marijap93/marijap93.github.io/blob/master/paeans_sunset.JPG?raw=true'); /* The image used */
         background-color: #cccccc; /* Used if the image is unavailable */
         background-position: center; /* Center the image */
         background-repeat: no-repeat; /* Do not repeat the image */
