--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <meta name="author" content="" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/marijap93/marijap93.github.io/master/paeans_sunset.JPG" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
