--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <meta name="keywords" content="" />
     <meta name="author" content="" />
     <meta property="og:image" content="https://github.com/marijap93/marijap93.github.io/blob/master/paeans_sunset.JPG?raw=true" />
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MKJ78ZMYKV"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-MKJ78ZMYKV');
+    </script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
